--- a/walmart-FE/src/moredetails.css
+++ b/walmart-FE/src/moredetails.css
@@ -39,7 +39,7 @@
    position: relative;
     padding-bottom: 40px;
     width: 100%;
-    height: 92%;
+    height: 460px;
   }
   .detailimgCls {
     position: relative;
